--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="c">
             <div style="text-align: center;">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FAnil_Chauhan&psig=AOvVaw2Vi6hIEFIIa20w7QY-CKq3&ust=1751104589701000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJiu-YmrkY4DFQAAAAAdAAAAABAE" class="a" alt="Anil Chauhan">
+                <img src="/https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FAnil_Chauhan&psig=AOvVaw2Vi6hIEFIIa20w7QY-CKq3&ust=1751104589701000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJiu-YmrkY4DFQAAAAAdAAAAABAE" class="a" alt="Anil Chauhan">
         
            </div>
             <div class="b">
