--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="c">
             <div style="text-align: center;">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FAnil_Chauhan&psig=AOvVaw3zOfO6Yo0vEtKOLSE-d7mw&ust=1751180718598000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCMjVntfGk44DFQAAAAAdAAAAABAE" class="a" alt="Anil Chauhan">
+                <img src="Anil_Chauhan_Chief_of_Defence_Staff_(CDS).jpg" class="a" alt="Anil Chauhan">
         
            </div>
             <div class="b">
