--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="c">
             <div style="text-align: center;">
-                <img src="Anil_Chauhan_Chief_of_Defence_Staff_(CDS).jpg" class="a" alt="Anil Chauhan">
+                <img src="https://github.com/ChanduSaiR/profile-card1/blob/b28c2db98dd098b6d433eba36ccd47b273c21fcc/Anil_Chauhan_Chief_of_Defence_Staff_(CDS).jpg" class="a" alt="Anil Chauhan">
         
            </div>
             <div class="b">
